--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="container">
       <div class="row">
-        <form id="car-select">
-          <div class="input-field col s4">
+        <form id="mpg">
+          <!-- <div class="input-field col s4">
             <select id="make">
               <option value="" disabled selected>Select Make</option>
               <option value="lexus">Lexus</option>
@@ -36,11 +36,36 @@
               <option value="2016">2016</option>
               <option value="2016">2016</option>
             </select>
+          </div> -->
+
+          <div class="row">
+            <div class="input-field col s6">
+              <input id="origin" type="text">
+              <label for="origin">Start</label>
+            </div>
+            <div class="input-field col s6">
+              <input id="destination" type="text">
+              <label for="destination">End</label>
+            </div>
           </div>
+
           <button type="submit" class="btn" id="mpg-button">Find MPG</button>
         </form>
       </div>
-      <div id="results-body"></div>
+      <div id="output"></div>
     </div>
+    <div id="map"></div>
+    <!-- <script>
+       var map;
+       function initMap() {
+         map = new google.maps.Map(document.getElementById('map'), {
+           center: {lat: 45.512794, lng: -122.679565},
+           zoom: 8
+         });
+       }
+     </script> -->
+    <script
+     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfTldJELwTqc1w6_stwnFXgQPq5qgw2E8&callback=initMap">
+   </script>
   </body>
 </html>
