--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row">
         <form id="mpg">
-          <!-- <div class="input-field col s4">
+          <div class="input-field col s4">
             <select id="make">
               <option value="" disabled selected>Select Make</option>
               <option value="lexus">Lexus</option>
@@ -19,7 +19,6 @@
               <option value="toyota">Toyota</option>
             </select>
           </div>
-
           <div class="input-field col s4">
             <select id="model">
               <option value="" disabled selected>Select Model</option>
@@ -28,7 +27,6 @@
               <option value="rav4">Rav4</option>
             </select>
           </div>
-
           <div class="input-field col s4">
             <select id="year">
               <option value="" disabled selected>Select year</option>
@@ -36,8 +34,7 @@
               <option value="2016">2016</option>
               <option value="2016">2016</option>
             </select>
-          </div> -->
-
+          </div>
           <div class="row">
             <div class="input-field col s6">
               <input id="origin" type="text">
@@ -48,22 +45,12 @@
               <label for="destination">End</label>
             </div>
           </div>
-
           <button type="submit" class="btn" id="mpg-button">Find MPG</button>
         </form>
       </div>
       <div id="output"></div>
     </div>
     <div id="map"></div>
-    <!-- <script>
-       var map;
-       function initMap() {
-         map = new google.maps.Map(document.getElementById('map'), {
-           center: {lat: 45.512794, lng: -122.679565},
-           zoom: 8
-         });
-       }
-     </script> -->
     <script
      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfTldJELwTqc1w6_stwnFXgQPq5qgw2E8&callback=initMap">
    </script>
