--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
       <div id="output"></div>
     </div>
     <div id="map"></div>
+    <select id="firstmenu" name="fruit">
+<option value="apple">apple</option>
+<option value="banana">banana</option>
+</select>
+<br/>
+<select id="secondmenu" name="vegetable">
+<option value="carrot">carrot</option>
+<option value="celery">celery</option>
+</select>
     <script
      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfTldJELwTqc1w6_stwnFXgQPq5qgw2E8&callback=initMap">
    </script>
